# FluxLab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: android.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_fluxlab.xml  ic_fluxlab_foreground.xml  ic_fluxlab_monochrome.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/raw/: open_source_licenses.md  open_source_licenses_in.md  privacy_policy.md  privacy_policy_in.md  terms_conditions.md  terms_conditions_in.md
app/src/main/res/values/: additional_strings.xml  changelog_strings.xml  colors.xml  comparison_export_strings.xml  strings.xml  themes.xml
app/src/main/res/values-in/: additional_strings.xml  changelog_strings.xml  comparison_export_strings.xml  strings.xml
app/src/main/res/values-v31/: themes.xml
core/benchmark/: build.gradle.kts
core/benchmark/src/main/cpp/: CMakeLists.txt  benchmark.cpp
core/data/: build.gradle.kts
core/data/schemas/com.febricahyaa.fluxlab.data.FluxLabDatabase/: 2.json
core/integration/: build.gradle.kts
core/model/: build.gradle.kts
docs/: APP_INFO_AND_LEGAL.md  ARCHITECTURE.md  BENCHMARK_METHODOLOGY.md  FLUXLAB_DESIGN_SYSTEM.md  FLUX_INTEGRATION.md  MONITORING_UI.md  PRIVACY.md  RELEASE_PROCESS.md  REPORT_SCHEMA.md  SECURITY_SIGNING.md  TELEMETRY_ARCHITECTURE.md
gradle/: libs.versions.toml
tools/: aapt2  android-clang-launcher.sh
(+67 files in other folders)
